# tex2pyomo

./: .gitignore  README.md  setup.cfg
src/tex2pyomo/: __init__.py  core.py
tests/: test_core.py
tests/data/: test1.html  test1.tex
