[metadata]
name = tex2pyomo
version = 0.0.1
author = Matt Oster
author_email = matthewoster@gmail.com
description = Convert optimization models written in latex to pyomo model code for later solving.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/osterm38/tex2pyomo.git
project_urls =
    Bug Tracker = https://github.com/osterm38/tex2pyomo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    lxml
    TexSoup
    pandas
    pyomo
    # pandoc, via command-line
[options.packages.find]
where = src